--- a/faang_code/src/Pages/Profile/index.css
+++ b/faang_code/src/Pages/Profile/index.css
@@ -18,6 +18,7 @@ body {
     max-width: 400px;
     text-align: center;
     animation: fadeIn 0.5s ease-in-out;
+    margin-left: 230px;
 }
 
 /* Profile heading */
